Actions
Bug #13129
closedlibc: gettimeofday() error: unchecked function return
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
smatch errors:
/code/illumos-gate/usr/src/tools/proto/root_i386-nd/opt/onbld/bin/i386/smatch: ../i386/sys/gettimeofday.c:43 gettimeofday() error: unchecked function return '__cp_clock_gettime_realtime' /code/illumos-gate/usr/src/tools/proto/root_i386-nd/opt/onbld/bin/i386/smatch: ../i386/sys/gettimeofday.c:45 gettimeofday() error: unchecked function return '__clock_gettime_sys'
Note from Robert: It might be worth adding in the ticket that neither
of these actually use traditional copying semantics. In particular
because this is a fast trap all data is returned in registers so neither
of these actually has a real return value.
Testing done: build/install/boot
Updated by Electric Monk over 1 year ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 93dc830ecbbcd243760848e27a0f901125432b04
commit 93dc830ecbbcd243760848e27a0f901125432b04 Author: Toomas Soome <tsoome@me.com> Date: 2020-09-11T21:41:29.000Z 13129 libc: gettimeofday() error: unchecked function return Reviewed by: Marco van Wieringen <mvw@planets.elm.net> Reviewed by: Patrick Mooney <pmooney@pfmooney.com> Approved by: Robert Mustacchi <rm@fingolfin.org>
Actions