13129 libc: gettimeofday() error: unchecked function return Reviewed by: Marco van Wieringen <mvw@planets.elm.net> Reviewed by: Patrick Mooney <pmooney@pfmooney.com> Approved by: Robert Mustacchi <rm@fingolfin.org>